Got the header right in desktop and mobile. Fixed spacing of activities in mobile.

--- a/Stylesheet.css
+++ b/Stylesheet.css
@@ -2,12 +2,19 @@ body {
     font-family: 'Raleway' , sans-serif;
 }
 header {
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
 }
 
-header :nth-child(1) {justify-self: start;}
+#logo {
+    margin-right: auto;
+}
+
+nav {
+    display: flex;
+}
 
 .navs{
     margin: 20px;
@@ -76,6 +83,7 @@ header :nth-child(1) {justify-self: start;}
     font-family: 'Raleway' , sans-serif;
     font-size: x-small;
 }
+
 .info-icon {
     border: 2px solid #F2F2F2;
     border-radius: 20px;
@@ -339,12 +347,16 @@ ul {
 @media all and (max-width: 768px) {
 
     header {
-        flex-direction: column;
         justify-content: space-between;
         flex-wrap: wrap;
     }
 
-    .header :nth-child(4) {order:2}
+    header :nth-child(2) {order:3}
+
+    nav {
+        width: 100%;
+        justify-content: space-between;
+    }
 
     #logo {
         width: 150px;
@@ -359,14 +371,12 @@ ul {
     }
     
     .filters {
-        font-weight: bold;
-        display: flex;
         flex-direction: column;
         flex-wrap: wrap;
         height: 170px;
-        width: 100%;
+        width: 50%;
         align-items: flex-start;
-        flex-wrap: wrap;
+        justify-content: space-around;
     }
 
     h4 {
@@ -435,6 +445,7 @@ ul {
     .pic-column {
         width: 100%;
         height: 370px;
+        margin: 10px 0px 10px 0px;
     }
 
     .small-pic {
